--- a/simulations/omnetpp.ini
+++ b/simulations/omnetpp.ini
@@ -1,12 +1,18 @@
 [General]
 #debug-on-errors = true
 #record-eventlog = true
+
+ned-path = .;../src;../../inetmanet-2.0/src;../src;../../Oversim-20121206/src
+
 network = Scenario
 sim-time-limit = 60min
 
+simtime-scale=-9
+
+
 cmdenv-express-mode = true
 
-*.hosts = 6
+*.hosts = 60
 
 **.constraintAreaMinX = 0m
 **.constraintAreaMinY = 0m
@@ -24,15 +30,104 @@ cmdenv-express-mode = true
 **.host*.mobility.updateInterval = 100ms
 **.host*.ac_wlan.interfaces = "wlan0"
 
-# UDPBasicApp / UDPSink
-**.numUdpApps = 1
-**.udpApp[0].typename = "UDPBasicApp"
-**.udpApp[0].destAddresses = "host[0]"
-**.udpApp[0].localPort = 9001
-**.udpApp[0].destPort = 9001
-**.udpApp[0].messageLength = 100B
-**.udpApp[0].startTime = uniform(10s, 30s)
-**.udpApp[0].sendInterval = uniform(10s, 30s)
+# generic app settings
+**.tier*.*.debugOutput = true
+**.tier*.*.activeNetwInitPhase = false
+
+# KBRTestApp settings
+**.tier1*.kbrTestApp.kbrOneWayTest = true
+**.tier1*.kbrTestApp.kbrRpcTest = false
+**.tier1*.kbrTestApp.kbrLookupTest = false
+**.tier1*.kbrTestApp.underlayTest = false
+**.tier1*.kbrTestApp.testMsgSize = 100B
+**.tier1*.kbrTestApp.testMsgInterval = 60s
+**.tier1*.kbrTestApp.msgHandleBufSize = 8
+**.tier1*.kbrTestApp.lookupNodeIds = true
+**.tier1*.kbrTestApp.failureLatency = 10s
+**.tier1*.kbrTestApp.onlyLookupInoffensiveNodes = false
+#**.tier1*.kbrTestApp.rpcTimeout = -1s
+**.tier1*.kbrTestApp.rpcRetries = 0
+
+
+# P2PNS settings
+**.tier2*.p2pns.twoStageResolution = false
+**.tier2*.p2pns.keepaliveInterval = 10s
+**.tier2*.p2pns.idCacheLifetime = 60s
+**.tier2*.p2pns.registerName = ""
+
+# ---- BaseRpc settings ----
+
+**.rpcUdpTimeout = 1.5s
+**.rpcKeyTimeout = 10.0s
+**.optimizeTimeouts = false
+**.rpcExponentialBackoff = false
+
+
+# Generic settings
+**.overlay*.*.nodeId = ""
+**.overlay*.*.debugOutput = true
+**.overlay*.*.hopCountMax = 50
+**.overlay*.*.recNumRedundantNodes = 3
+**.overlay*.*.collectPerHopDelay = false
+SimpleUnderlayNetwork.*.overlay*.*.drawOverlayTopology = true
+**.overlay*.*.drawOverlayTopology = false
+**.overlay*.*.useCommonAPIforward = false
+**.overlay*.*.routingType = "iterative"  #"exhaustive-iterative semi-recursive full-recursive source-routing-recursive"
+**.overlay*.*.keyLength = 160
+**.overlay*.*.joinOnApplicationRequest = false
+**.overlay.*.localPort = 1024
+**.overlay*.*.rejoinOnFailure = true
+**.overlay*.*.sendRpcResponseToLastHop = true
+**.overlay*.*.recordRoute = false
+**.overlay*.*.measureAuthBlock = false
+**.overlay*.*.dropFindNodeAttack = false
+**.overlay*.*.isSiblingAttack = false
+**.overlay*.*.invalidNodesAttack = false
+**.overlay*.*.dropRouteMessageAttack = false
+**.overlay*.*.restoreContext = false
+
+# general overlay lookup settings
+**.overlay*.*.lookupRedundantNodes = 1
+**.overlay*.*.lookupParallelPaths = 1
+**.overlay*.*.lookupParallelRpcs = 1
+**.overlay*.*.lookupVerifySiblings = false
+**.overlay*.*.lookupMajoritySiblings = false
+**.overlay*.*.lookupMerge = false
+**.overlay*.*.lookupUseAllParallelResponses = false
+**.overlay*.*.lookupStrictParallelRpcs = false
+**.overlay*.*.lookupNewRpcOnEveryTimeout = false
+**.overlay*.*.lookupNewRpcOnEveryResponse = false
+**.overlay*.*.lookupFinishOnFirstUnchanged = false
+**.overlay*.*.lookupVisitOnlyOnce = true
+**.overlay*.*.lookupAcceptLateSiblings = true
+**.overlay*.*.lookupFailedNodeRpcs = false
+**.overlay*.*.routeMsgAcks = false
+
+# bootstrapList configuration
+**.bootstrapList.debugOutput = true
+**.bootstrapList.mergeOverlayPartitions = false
+**.bootstrapList.maintainList = false
+
+# Chord settings
+**.overlay*.chord.joinRetry = 2
+**.overlay*.chord.joinDelay = 10s
+**.overlay*.chord.stabilizeRetry = 1
+**.overlay*.chord.stabilizeDelay = 20s
+**.overlay*.chord.fixfingersDelay = 120s
+**.overlay*.chord.checkPredecessorDelay = 5s
+**.overlay*.chord.routingType = "iterative"
+**.overlay*.chord.successorListSize = 8
+**.overlay*.chord.aggressiveJoinMode = true
+**.overlay*.chord.extendedFingerTable = false
+**.overlay*.chord.numFingerCandidates = 3
+**.overlay*.chord.proximityRouting = false
+**.overlay*.chord.memorizeFailedSuccessor = false
+**.overlay*.chord.mergeOptimizationL1 = false
+**.overlay*.chord.mergeOptimizationL2 = false
+**.overlay*.chord.mergeOptimizationL3 = false
+**.overlay*.chord.mergeOptimizationL4 = false
+
+
 
 # nic settings
 **.wlan[*].mgmtType = "Ieee80211MgmtAdhoc"
@@ -50,5 +145,176 @@ cmdenv-express-mode = true
 **.wlan[*].radio.receiver.sensitivity = -85dBm
 **.wlan[*].radio.receiver.snirThreshold = 4dB
 
-**.udpapp.*.vector-recording = true
 **.vector-recording = true
+
+
+[Config ChordOverMANET]
+#debug-on-errors = true
+#record-eventlog = true
+
+description = Chord over MANET
+network = Scenario
+sim-time-limit = 60min #note: see oversim-specific parameters "transition-time" / "measurement time"
+
+cmdenv-express-mode = true
+
+*.hosts = 25
+
+**.constraintAreaMinX = 0m
+**.constraintAreaMinY = 0m
+**.constraintAreaMinZ = 0m
+**.constraintAreaMaxX = 2000m
+**.constraintAreaMaxY = 2000m
+**.constraintAreaMaxZ = 0m
+
+**.neighborCache.debugOutput = true
+**.chord.overlayId = 0
+
+# mobility
+**.host*.mobilityType = "MassMobility"
+**.host*.mobility.initFromDisplayString = false
+**.host*.mobility.changeInterval = truncnormal(2s, 0.5s)
+**.host*.mobility.changeAngleBy = normal(0deg, 30deg)
+**.host*.mobility.speed = truncnormal(20mps, 8mps)
+**.host*.mobility.updateInterval = 100ms
+**.host*.ac_wlan.interfaces = "wlan0"
+
+#overlay
+**.overlayType = "p2psipmanet.ManetChordModules"
+
+#tiers
+**.tier1Type = "oversim.applications.kbrtestapp.KBRTestAppModules"
+**.tier2Type = "oversim.common.TierDummy"
+**.tier3Type = "oversim.common.TierDummy"
+**.numTiers = 1
+
+**.tier3.debugOutput = false
+**.tier2.debugOutput = false
+
+#try using default OLSR type
+
+# nic settings
+**.wlan[*].mgmtType = "Ieee80211MgmtAdhoc"
+**.wlan[*].bitrate = 2Mbps
+
+**.wlan[*].mgmt.frameCapacity = 10
+**.wlan[*].mac.address = "auto"
+**.wlan[*].mac.maxQueueSize = 14
+**.wlan[*].mac.rtsThresholdBytes = 3000B
+**.wlan[*].mac.retryLimit = 7
+**.wlan[*].mac.cwMinData = 7
+**.wlan[*].mac.cwMinBroadcast = 31
+
+**.wlan[*].radio.transmitter.power = 2mW
+**.wlan[*].radio.receiver.sensitivity = -85dBm
+**.wlan[*].radio.receiver.snirThreshold = 4dB
+
+**.vector-recording = true
+
+**.terminalTypes= "p2psipmanet.Host"
+**.churnGeneratorTypes = "p2psipmanet.ZeroChurn" # a list of churn generators to be used
+**.transitionTime = 20s
+**.measurementTime = 280s
+**.gracefulLeaveDelay = 0s
+**.gracefulLeaveProbability = 0
+
+# neighbor cache settings
+**.neighborCache.enableNeighborCache = false
+**.neighborCache.rttExpirationTime = 100s
+**.neighborCache.maxSize = 400
+**.neighborCache.rttHistory = 10
+**.neighborCache.timeoutAccuracyLimit = 0.6
+**.neighborCache.defaultQueryType = "exact"
+**.neighborCache.defaultQueryTypeI = "available"
+**.neighborCache.defaultQueryTypeQ = "exact"
+**.neighborCache.doDiscovery = false
+**.neighborCache.collectClosestNodes = 0
+**.neighborCache.ncsType = "none" #"vivaldi","svivaldi","gnp","nps"
+**.neighborCache.ncsPiggybackOwnCoords = true
+**.neighborCache.useNcsForTimeout = false
+
+# tree management settings
+**.neighborCache.treeMgmtEnableTreeManagement = false
+**.neighborCache.treeMgmtBuildInterval = 5s
+**.neighborCache.treeMgmtChildrenTimeOut = 10s
+
+**.neighborCache.gvbEnableGlobalViewBuilder = true
+**.neighborCache.gvbSendStrategy = "sendAll" # sendAll|simplifyCoords|removeRandom|removeInaccurate|regions|treeTest 
+**.neighborCache.gvbCoordSendInterval = 120s
+**.neighborCache.gvbOnlyAcceptCompleteCCD = false
+**.neighborCache.gvbStrategyRemoveCoordsMode = "percentage"	# percentage|limitCoords|limitTraffic)
+**.neighborCache.gvbStrategyRemoveCoordsPercentage = 10
+**.neighborCache.gvbStrategyRemoveCoordsCoordsLimit = 10
+**.neighborCache.gvbStrategyRemoveCoordsTrafficLimit = 1000
+**.neighborCache.gvbStrategyRegionsSizePerDimension = 400
+**.neighborCache.gvbStrategyRegionsMaxSpread = 200
+**.neighborCache.gvbStrategySimplifyCoordsFactor = 10
+
+**.neighborCache.gvbC2AParameter = "-p 4"
+**.neighborCache.gvbDistributeGlobalView = true
+
+# Discovery Mode settings
+**.neighborCache.discoveryModeNumSpreadedNodes = 5
+**.neighborCache.discoveryModeNumCloseNodes = 5
+**.neighborCache.discoveryModeMaxSteps = -1
+**.neighborCache.discoveryModeSpreadedSteps = 3
+
+# GNP settings
+**.neighborCache.gnpDimensions = 2
+**.neighborCache.gnpCoordCalcRuns = 50
+**.neighborCache.gnpLandmarkTimeout = 2s
+
+# NPS settings
+**.neighborCache.npsMaxLayer = 3
+
+# Vivaldi settings
+**.neighborCache.vivaldiShowPosition = false
+**.neighborCache.vivaldiErrorConst = 0.95
+**.neighborCache.vivaldiCoordConst = 0.25
+**.neighborCache.vivaldiDimConst = 2
+**.neighborCache.vivaldiEnableHeightVector = false
+
+# SVivaldi settings
+**.neighborCache.svivaldiLossConst = 0.001
+**.neighborCache.svivaldiLossResetLimit = 0.001
+
+# SimpleNcs settings
+**.neighborCache.simpleNcsDelayFaultType = "no_fault"
+#possible fault values: live_all, live_planetlab, simulation. everything else: no fault
+
+# cryptoModule settings
+SingleHostUnderlayNetwork.overlayTerminal[0].cryptoModule.keyFile = "key.bin"
+**.cryptoModule.keyFile = ""
+
+# ---- BaseRpc settings ----
+
+**.rpcUdpTimeout = 1.5s
+**.rpcKeyTimeout = 10.0s
+**.optimizeTimeouts = false
+**.rpcExponentialBackoff = false
+
+# use globalFunctions?
+*.globalObserver.globalFunctions[*].functionType = ""
+*.globalObserver.numGlobalFunctions = 0
+
+# global statistics
+*.globalObserver.globalStatistics.outputMinMax = false
+*.globalObserver.globalStatistics.outputStdDev = false
+*.globalObserver.globalStatistics.globalStatTimerInterval = 0s
+*.globalObserver.globalStatistics.measureNetwInitPhase = false
+
+# GlobalNodeList settings
+*.globalObserver.globalNodeList.maxNumberOfKeys = 100
+*.globalObserver.globalNodeList.keyProbability = 0.1
+*.globalObserver.globalNodeList.maliciousNodeProbability = 0.0
+*.globalObserver.globalNodeList.maliciousNodeChange = false
+*.globalObserver.globalNodeList.maliciousNodeChangeStartTime = 200s
+*.globalObserver.globalNodeList.maliciousNodeChangeRate = 0.05
+*.globalObserver.globalNodeList.maliciousNodeChangeInterval = 100s
+*.globalObserver.globalNodeList.maliciousNodeChangeStartValue = 0
+*.globalObserver.globalNodeList.maliciousNodeChangeStopValue = 0.5
+
+# GlobalObserver configuration
+*.globalObserver.globalTraceManager.traceFile = ""
+*.globalObserver.globalParameters.printStateToStdOut = false
+*.globalObserver.globalParameters.topologyAdaptation = false
