--- a/simulations/default.ini
+++ b/simulations/default.ini
@@ -233,3 +233,17 @@ SingleHostUnderlayNetwork.overlayTerminal[0].cryptoModule.keyFile = "key.bin"
 *.globalObserver.globalTraceManager.traceFile = ""
 *.globalObserver.globalParameters.printStateToStdOut = false
 *.globalObserver.globalParameters.topologyAdaptation = false
+
+#DHT settings
+**.tier1*.dht.numReplica = 4
+**.tier1*.dht.numGetRequests = 4
+**.tier1*.dht.ratioIdentical = 0.5
+**.tier1*.dht.secureMaintenance = false
+**.tier1*.dht.invalidDataAttack = false
+**.tier1*.dht.maintenanceAttack = false
+**.tier1*.dht.numReplicaTeams = 3
+
+# DHTTestApp settings
+**.tier2*.dhtTestApp.testInterval = 60s
+**.tier2*.dhtTestApp.testTtl = 300
+**.tier2*.dhtTestApp.p2pnsTraffic = false
