--- a/simulations/omnetpp.ini
+++ b/simulations/omnetpp.ini
@@ -51,6 +51,104 @@ network = Scenario
 **.transitionTime = 20s
 **.measurementTime = 280s
 
+[Config ChordOverMANET_Stationary]
+#debug-on-errors = true
+#record-eventlog = true
+sim-time-limit = 60min #note: see oversim-specific parameters "transition-time" / "measurement time"
+description = "Chord over MANET - no mobility"
+network = Scenario
+
+*.hosts = 25
+
+**.constraintAreaMinX = 0m
+**.constraintAreaMinY = 0m
+**.constraintAreaMinZ = 0m
+**.constraintAreaMaxX = 2000m
+**.constraintAreaMaxY = 2000m
+**.constraintAreaMaxZ = 0m
+
+**.neighborCache.debugOutput = true
+**.chord.overlayId = 0
+
+# mobility
+**.host*.mobilityType = "StationaryMobility"
+**.host*.mobility.initFromDisplayString = false
+
+**.host*.ac_wlan.interfaces = "wlan0"
+
+#overlay
+**.overlayType = "p2psipmanet.ManetChordModules"
+
+#tiers
+**.tier1Type = "oversim.applications.kbrtestapp.KBRTestAppModules"
+**.tier2Type = "oversim.common.TierDummy"
+**.tier3Type = "oversim.common.TierDummy"
+**.numTiers = 1
+
+**.tier3.debugOutput = false
+**.tier2.debugOutput = false
+
+#OLSR manet routing
+
+**.vector-recording = true
+
+**.terminalTypes= "p2psipmanet.Host"
+**.churnGeneratorTypes = "p2psipmanet.ZeroChurn" # a list of churn generators to be used
+**.transitionTime = 20s
+**.measurementTime = 280s
+
+
+[Config ChordDHTOverMANET_Stationary]
+#debug-on-errors = true
+#record-eventlog = true
+sim-time-limit = 60min #note: see oversim-specific parameters "transition-time" / "measurement time"
+description = "Chord DHT over MANET - no mobility"
+network = Scenario
+
+*.hosts = 25
+
+**.constraintAreaMinX = 0m
+**.constraintAreaMinY = 0m
+**.constraintAreaMinZ = 0m
+**.constraintAreaMaxX = 2000m
+**.constraintAreaMaxY = 2000m
+**.constraintAreaMaxZ = 0m
+
+**.neighborCache.debugOutput = true
+**.chord.overlayId = 0
+
+# mobility
+**.host*.mobilityType = "StationaryMobility"
+**.host*.mobility.initFromDisplayString = false
+
+**.host*.ac_wlan.interfaces = "wlan0"
+
+#overlay
+**.overlayType = "p2psipmanet.ManetChordModules"
+
+#tiers
+**.tier1Type = "oversim.applications.dht.DHTModules"
+**.tier2Type = "oversim.tier2.dhttestapp.DHTTestAppModules"
+**.tier3Type = "oversim.common.TierDummy"
+
+**.numTiers = 2
+**.dht.numReplica = 4
+
+**.tier3.debugOutput = false
+**.tier2.debugOutput = false
+
+**.globalObserver.globalFunctions[0].functionType = "oversim.tier2.dhttestapp.GlobalDhtTestMap"
+**.globalObserver.numGlobalFunctions = 1
+#OLSR manet routing
+
+**.vector-recording = true
+
+**.terminalTypes= "p2psipmanet.Host"
+**.churnGeneratorTypes = "p2psipmanet.ZeroChurn" # a list of churn generators to be used
+**.transitionTime = 20s
+**.measurementTime = 480s
+
+
 #include default values
 
 include ./default.ini
