minor fix to underlayconfigurator

--- a/simulations/omnetpp.ini
+++ b/simulations/omnetpp.ini
@@ -53,7 +53,7 @@ network = Scenario
 
 [Config ChordOverMANET_Stationary]
 #debug-on-errors = true
-#record-eventlog = true
+record-eventlog = true
 sim-time-limit = 60min #note: see oversim-specific parameters "transition-time" / "measurement time"
 description = "Chord over MANET - no mobility"
 network = Scenario
@@ -100,7 +100,7 @@ network = Scenario
 
 [Config ChordDHTOverMANET_Stationary]
 #debug-on-errors = true
-#record-eventlog = true
+record-eventlog = false
 sim-time-limit = 60min #note: see oversim-specific parameters "transition-time" / "measurement time"
 description = "Chord DHT over MANET - no mobility"
 network = Scenario
@@ -134,8 +134,8 @@ network = Scenario
 **.numTiers = 2
 **.dht.numReplica = 4
 
-**.tier3.debugOutput = false
-**.tier2.debugOutput = false
+**.tier3.debugOutput = true
+**.tier2.debugOutput = true
 
 **.globalObserver.globalFunctions[0].functionType = "oversim.tier2.dhttestapp.GlobalDhtTestMap"
 **.globalObserver.numGlobalFunctions = 1
@@ -145,8 +145,8 @@ network = Scenario
 
 **.terminalTypes= "p2psipmanet.Host"
 **.churnGeneratorTypes = "p2psipmanet.ZeroChurn" # a list of churn generators to be used
-**.transitionTime = 20s
-**.measurementTime = 480s
+**.transitionTime = 100s
+**.measurementTime = 500s
 
 
 #include default values
