--- a/src/Makefile
+++ b/src/Makefile
@@ -1,12 +1,12 @@
 #
-# OMNeT++/OMNEST Makefile for p2psipmanet
+# OMNeT++/OMNEST Makefile for P2PSIPMANET
 #
 # This file was generated with the command:
-#  opp_makemake -f --deep -I../../Oversim-20121206/src/common -I../../inetmanet-2.0/src/networklayer/common -I../../inetmanet-2.0/src/transport/tcp/queues -I../../inetmanet-2.0/src/linklayer/ieee80211mesh/locator -I../../inetmanet-2.0/src/linklayer/ieee80211/radio/errormodel -I../../inetmanet-2.0/src/world/radio -I../../inetmanet-2.0/src/networklayer/icmpv6 -I../../Oversim-20121206/src/overlay/pastry -I../../inetmanet-2.0/src/networklayer/arp -I../../inetmanet-2.0/src/linklayer/ethernet -I../../Oversim-20121206/src/underlay/singlehostunderlay -I../../inetmanet-2.0/src/networklayer/contract -I../../inetmanet-2.0/src/transport/sctp -I../../Oversim-20121206/src/underlay/simpleunderlay -I../../inetmanet-2.0/src/networklayer/routing/aodv -I../../inetmanet-2.0/src/mobility/contract -I../../inetmanet-2.0/src/transport/udp -I../../inetmanet-2.0/src/transport/tcp -I../../inetmanet-2.0/src/util/headerserializers/ipv6 -I../../inetmanet-2.0/src/world/powercontrol -I../../Oversim-20121206/src/overlay/chord -I../../inetmanet-2.0/src/linklayer/ieee80211/radio -I../../inetmanet-2.0/src/util -I../../inetmanet-2.0/src/networklayer/manetrouting/dsr -I../../inetmanet-2.0/src/util/headerserializers/ipv4 -I../../inetmanet-2.0/src -I../../inetmanet-2.0/src/networklayer/ipv4 -I../../inetmanet-2.0/src/linklayer/radio -I../../inetmanet-2.0/src/wpan/linklayer/ieee802154/mac -I../../inetmanet-2.0/src/world/obstacles -I../../inetmanet-2.0/src/battery/models -I../../inetmanet-2.0/src/wpan/linklayer/ieee802154/contract -I../../inetmanet-2.0/src/linklayer/ieee80211/mac -I../../inetmanet-2.0/src/wpan/linklayer/bmac -I../../inetmanet-2.0/src/linklayer/radio/propagation -I../../inetmanet-2.0/src/networklayer/ipv6tunneling -I../../inetmanet-2.0/src/linklayer/ieee80211/mgmt -I../../inetmanet-2.0/src/networklayer/ipv6 -I../../Oversim-20121206/src/common/cbr -I../../inetmanet-2.0/src/util/headerserializers/tcp -I../../Oversim-20121206/src/common/cbr/globalViewBuilder -I../../inetmanet-2.0/src/mobility/common -I../../inetmanet-2.0/src/util/headerserializers/udp -I../../Oversim-20121206/src/applications/dht -I../../inetmanet-2.0/src/applications/pingapp -I../../inetmanet-2.0/src/util/headerserializers/sctp -I../../inetmanet-2.0/src/linklayer/common -I../../inetmanet-2.0/src/transport/contract -I../../inetmanet-2.0/src/networklayer/autorouting/ipv4 -I../../inetmanet-2.0/src/networklayer/manetrouting/base -I../../inetmanet-2.0/src/transport/tcp_common -I../../inetmanet-2.0/src/linklayer/contract -I../../inetmanet-2.0/src/base -I../../inetmanet-2.0/src/networklayer/xmipv6 -I../../inetmanet-2.0/src/wpan/phyLayer/ieee802154 -I../../inetmanet-2.0/src/status -I../../inetmanet-2.0/src/util/headerserializers -I../../inetmanet-2.0/src/wpan/networklayer/contract -L../../inetmanet-2.0/out/$$\(CONFIGNAME\)/src -L../../Oversim-20121206/out/$$\(CONFIGNAME\)/src -linet -lOversim-20121206 -DINET_IMPORT -KINETMANET_2_0_PROJ=../../inetmanet-2.0 -KOVERSIM_20121206_PROJ=../../Oversim-20121206
+#  opp_makemake -f --deep -O out -I../../Oversim-20121206/src/common -I../../inetmanet-2.0/src/networklayer/common -I../../inetmanet-2.0/src/transport/tcp/queues -I../../inetmanet-2.0/src/linklayer/ieee80211mesh/locator -I../../inetmanet-2.0/src/linklayer/ieee80211/radio/errormodel -I../../inetmanet-2.0/src/world/radio -I../../inetmanet-2.0/src/networklayer/icmpv6 -I../../Oversim-20121206/src/overlay/pastry -I../../inetmanet-2.0/src/networklayer/arp -I../../inetmanet-2.0/src/linklayer/ethernet -I../../Oversim-20121206/src/underlay/singlehostunderlay -I../../inetmanet-2.0/src/networklayer/contract -I../../inetmanet-2.0/src/transport/sctp -I../../Oversim-20121206/src/underlay/simpleunderlay -I../../inetmanet-2.0/src/networklayer/routing/aodv -I../../inetmanet-2.0/src/mobility/contract -I../../inetmanet-2.0/src/transport/udp -I../../inetmanet-2.0/src/transport/tcp -I../../inetmanet-2.0/src/util/headerserializers/ipv6 -I../../inetmanet-2.0/src/world/powercontrol -I../../Oversim-20121206/src/overlay/chord -I../../inetmanet-2.0/src/linklayer/ieee80211/radio -I../../inetmanet-2.0/src/util -I../../inetmanet-2.0/src/networklayer/manetrouting/dsr -I../../inetmanet-2.0/src/util/headerserializers/ipv4 -I../../inetmanet-2.0/src -I../../inetmanet-2.0/src/networklayer/ipv4 -I../../inetmanet-2.0/src/linklayer/radio -I../../inetmanet-2.0/src/wpan/linklayer/ieee802154/mac -I../../inetmanet-2.0/src/world/obstacles -I../../inetmanet-2.0/src/battery/models -I../../inetmanet-2.0/src/wpan/linklayer/ieee802154/contract -I../../inetmanet-2.0/src/linklayer/ieee80211/mac -I../../inetmanet-2.0/src/wpan/linklayer/bmac -I../../inetmanet-2.0/src/linklayer/radio/propagation -I../../inetmanet-2.0/src/networklayer/ipv6tunneling -I../../inetmanet-2.0/src/linklayer/ieee80211/mgmt -I../../inetmanet-2.0/src/networklayer/ipv6 -I../../Oversim-20121206/src/common/cbr -I../../inetmanet-2.0/src/util/headerserializers/tcp -I../../Oversim-20121206/src/common/cbr/globalViewBuilder -I../../inetmanet-2.0/src/mobility/common -I../../inetmanet-2.0/src/util/headerserializers/udp -I../../Oversim-20121206/src/applications/dht -I../../inetmanet-2.0/src/applications/pingapp -I../../inetmanet-2.0/src/util/headerserializers/sctp -I../../inetmanet-2.0/src/linklayer/common -I../../inetmanet-2.0/src/transport/contract -I../../inetmanet-2.0/src/networklayer/autorouting/ipv4 -I../../inetmanet-2.0/src/networklayer/manetrouting/base -I../../inetmanet-2.0/src/transport/tcp_common -I../../inetmanet-2.0/src/linklayer/contract -I../../inetmanet-2.0/src/base -I../../inetmanet-2.0/src/networklayer/xmipv6 -I../../inetmanet-2.0/src/wpan/phyLayer/ieee802154 -I../../inetmanet-2.0/src/status -I../../inetmanet-2.0/src/util/headerserializers -I../../inetmanet-2.0/src/wpan/networklayer/contract -L../../inetmanet-2.0/out/$$\(CONFIGNAME\)/src -L../../Oversim-20121206/out/$$\(CONFIGNAME\)/src -linet -lOversim-20121206 -DINET_IMPORT -KINETMANET_2_0_PROJ=../../inetmanet-2.0 -KOVERSIM_20121206_PROJ=../../Oversim-20121206
 #
 
 # Name of target to be created (-o option)
-TARGET = p2psipmanet$(EXE_SUFFIX)
+TARGET = P2PSIPMANET$(EXE_SUFFIX)
 
 # User interface (uncomment one) (-u option)
 USERIF_LIBS = $(ALL_ENV_LIBS) # that is, $(TKENV_LIBS) $(CMDENV_LIBS)
@@ -88,7 +88,7 @@ PROJECTRELATIVE_PATH = src
 O = $(PROJECT_OUTPUT_DIR)/$(CONFIGNAME)/$(PROJECTRELATIVE_PATH)
 
 # Object files for local .cc and .msg files
-OBJS = $O/ZeroChurn.o $O/ManetChord.o $O/DummyUnderlayConfigurator.o
+OBJS = $O/ManetChord.o $O/DummyUnderlayConfigurator.o $O/ZeroChurn.o
 
 # Message files
 MSGFILES =
@@ -167,7 +167,7 @@ msgheaders: $(MSGFILES:.msg=_m.h)
 clean:
 	$(qecho) Cleaning...
 	$(Q)-rm -rf $O
-	$(Q)-rm -f p2psipmanet p2psipmanet.exe libp2psipmanet.so libp2psipmanet.a libp2psipmanet.dll libp2psipmanet.dylib
+	$(Q)-rm -f P2PSIPMANET P2PSIPMANET.exe libP2PSIPMANET.so libP2PSIPMANET.a libP2PSIPMANET.dll libP2PSIPMANET.dylib
 	$(Q)-rm -f ./*_m.cc ./*_m.h
 
 cleanall: clean
@@ -201,6 +201,7 @@ $O/DummyUnderlayConfigurator.o: DummyUnderlayConfigurator.cc \
 	$(OVERSIM_20121206_PROJ)/src/underlay/simpleunderlay/SimpleNodeEntry.h \
 	$(OVERSIM_20121206_PROJ)/src/underlay/simpleunderlay/SimpleTCP.h \
 	$(OVERSIM_20121206_PROJ)/src/underlay/simpleunderlay/SimpleUDP.h \
+	DummyUnderlayConfigurator.h \
 	$(INETMANET_2_0_PROJ)/src/base/BasicModule.h \
 	$(INETMANET_2_0_PROJ)/src/base/ByteArray.h \
 	$(INETMANET_2_0_PROJ)/src/base/ByteArray_m.h \
@@ -229,8 +230,7 @@ $O/DummyUnderlayConfigurator.o: DummyUnderlayConfigurator.cc \
 	$(INETMANET_2_0_PROJ)/src/transport/tcp_common/TCPSegment.h \
 	$(INETMANET_2_0_PROJ)/src/transport/tcp_common/TCPSegment_m.h \
 	$(INETMANET_2_0_PROJ)/src/transport/udp/UDP.h \
-	$(INETMANET_2_0_PROJ)/src/transport/udp/UDPPacket_m.h \
-	DummyUnderlayConfigurator.h
+	$(INETMANET_2_0_PROJ)/src/transport/udp/UDPPacket_m.h
 $O/ManetChord.o: ManetChord.cc \
 	$(OVERSIM_20121206_PROJ)/src/common/AbstractLookup.h \
 	$(OVERSIM_20121206_PROJ)/src/common/BaseApp.h \
@@ -292,6 +292,7 @@ $O/ManetChord.o: ManetChord.cc \
 	$(OVERSIM_20121206_PROJ)/src/overlay/chord/ChordSuccessorList.h \
 	$(OVERSIM_20121206_PROJ)/src/underlay/simpleunderlay/SimpleInfo.h \
 	$(OVERSIM_20121206_PROJ)/src/underlay/simpleunderlay/SimpleNodeEntry.h \
+	ManetChord.h \
 	$(INETMANET_2_0_PROJ)/src/base/ByteArray.h \
 	$(INETMANET_2_0_PROJ)/src/base/ByteArray_m.h \
 	$(INETMANET_2_0_PROJ)/src/base/Compat.h \
@@ -306,8 +307,7 @@ $O/ManetChord.o: ManetChord.cc \
 	$(INETMANET_2_0_PROJ)/src/transport/contract/UDPSocket.h \
 	$(INETMANET_2_0_PROJ)/src/transport/tcp_common/TCPSegment.h \
 	$(INETMANET_2_0_PROJ)/src/transport/tcp_common/TCPSegment_m.h \
-	$(INETMANET_2_0_PROJ)/src/transport/udp/UDPPacket_m.h \
-	ManetChord.h
+	$(INETMANET_2_0_PROJ)/src/transport/udp/UDPPacket_m.h
 $O/ZeroChurn.o: ZeroChurn.cc \
 	$(OVERSIM_20121206_PROJ)/src/common/ChurnGenerator.h \
 	$(OVERSIM_20121206_PROJ)/src/common/InitStages.h \
@@ -315,10 +315,10 @@ $O/ZeroChurn.o: ZeroChurn.cc \
 	$(OVERSIM_20121206_PROJ)/src/common/UnderlayConfigurator.h \
 	$(OVERSIM_20121206_PROJ)/src/common/UnderlayConfiguratorAccess.h \
 	$(OVERSIM_20121206_PROJ)/src/common/oversim_mapset.h \
+	ZeroChurn.h \
 	$(INETMANET_2_0_PROJ)/src/base/Compat.h \
 	$(INETMANET_2_0_PROJ)/src/base/INETDefs.h \
 	$(INETMANET_2_0_PROJ)/src/networklayer/contract/IPv4Address.h \
 	$(INETMANET_2_0_PROJ)/src/networklayer/contract/IPv6Address.h \
-	$(INETMANET_2_0_PROJ)/src/networklayer/contract/IPvXAddress.h \
-	ZeroChurn.h
+	$(INETMANET_2_0_PROJ)/src/networklayer/contract/IPvXAddress.h
 
