add attack configs

--- a/simulations/omnetpp.ini
+++ b/simulations/omnetpp.ini
@@ -1,7 +1,5 @@
 #simulations
 
-
-
 [Config ChordOverMANET]
 #debug-on-errors = true
 #record-eventlog = true
@@ -152,3 +150,4 @@ network = Scenario
 #include default values
 
 include ./default.ini
+include ./noattack.ini
