--- a/simulations/default.ini
+++ b/simulations/default.ini
@@ -88,6 +88,27 @@ cmdenv-express-mode = true
 **.bootstrapList.mergeOverlayPartitions = false
 **.bootstrapList.maintainList = false
 
+#EpiChord settings
+**.overlay*.epichord.lookupRedundantNodes = 3
+**.overlay*.epichord.lookupParallelPaths = 1
+**.overlay*.epichord.lookupParallelRpcs = 1
+**.overlay*.epichord.lookupMerge = true
+**.overlay*.epichord.routingType = "iterative"
+**.overlay*.epichord.joinRetry = 2
+**.overlay*.epichord.joinDelay = 10s
+**.overlay*.epichord.stabilizeDelay = 20s
+**.overlay*.epichord.stabilizeEstimation = true
+**.overlay*.epichord.stabilizeEstimateMuliplier = 0.5
+**.overlay*.epichord.cacheFlushDelay = 20s
+**.overlay*.epichord.cacheCheckMultiplier = 3
+**.overlay*.epichord.cacheTTL = 120s
+**.overlay*.epichord.successorListSize = 4
+**.overlay*.epichord.nodesPerSlice = 2
+**.overlay*.epichord.cacheUpdateDelta = 0.5
+**.overlay*.epichord.activePropagation = true
+**.overlay*.epichord.sendFalseNegWarnings = true
+**.overlay*.epichord.fibonacci = false
+
 # Chord settings
 **.overlay*.chord.joinRetry = 5
 **.overlay*.chord.joinDelay = 5s
