--- a/simulations/omnetpp.ini
+++ b/simulations/omnetpp.ini
@@ -1,7 +1,5 @@
 #simulations
 
-
-
 [Config ChordOverMANET]
 #debug-on-errors = true
 #record-eventlog = true
@@ -105,7 +103,7 @@ sim-time-limit = 60min #note: see oversim-specific parameters "transition-time" 
 description = "Chord DHT over MANET - no mobility"
 network = Scenario
 
-*.hosts = 25
+*.hosts = 12
 
 **.constraintAreaMinX = 0m
 **.constraintAreaMinY = 0m
@@ -135,7 +133,243 @@ network = Scenario
 **.dht.numReplica = 4
 
 **.tier3.debugOutput = true
-**.tier2.debugOutput = true
+#**.tier2.debugOutput = true
+
+**.globalObserver.globalFunctions[0].functionType = "oversim.tier2.dhttestapp.GlobalDhtTestMap"
+**.globalObserver.numGlobalFunctions = 1
+#OLSR manet routing
+
+**.vector-recording = true
+
+**.terminalTypes= "p2psipmanet.Host"
+**.churnGeneratorTypes = "p2psipmanet.ZeroChurn" # a list of churn generators to be used
+**.transitionTime = 100s
+**.measurementTime = 500s
+
+
+[Config EpiChordOverOLSR]
+record-eventlog = false
+sim-time-limit = 60min #note: see oversim-specific parameters "transition-time" / "measurement time"
+description = "EpiChord over OLSR"
+network = Scenario
+
+*.hosts = 3
+
+**.constraintAreaMinX = 0m
+**.constraintAreaMinY = 0m
+**.constraintAreaMinZ = 0m
+**.constraintAreaMaxX = 2000m
+**.constraintAreaMaxY = 2000m
+**.constraintAreaMaxZ = 0m
+
+**.neighborCache.debugOutput = true
+**.epichord.overlayId = 0
+
+# mobility
+**.host*.mobilityType = "StationaryMobility"
+**.host*.mobility.initFromDisplayString = false
+
+**.host*.ac_wlan.interfaces = "wlan0"
+
+#overlay
+#**.overlayType = "oversim.overlay.epichord.EpiChordModules"
+**.overlayType = "p2psipmanet.ManetEpiChordModules"
+
+#tiers
+**.tier1Type = "oversim.applications.kbrtestapp.KBRTestAppModules"
+**.tier1*.kbrTestApp.kbrOneWayTest = false
+**.tier1*.kbrTestApp.kbrRpcTest = false
+**.tier1*.kbrTestApp.kbrLookupTest = true
+**.tier2Type = "oversim.common.TierDummy"
+**.tier3Type = "oversim.common.TierDummy"
+
+**.numTiers = 1
+
+**.tier3.debugOutput = false
+**.tier2.debugOutput = false
+
+**.overlay*.epichord.lookupRedundantNodes = 3
+**.overlay*.epichord.lookupParallelPaths = 1
+**.overlay*.epichord.lookupParallelRpcs = 1
+**.overlay*.epichord.lookupMerge = true
+**.overlay*.epichord.routingType = "iterative"
+**.overlay*.epichord.joinRetry = 2
+**.overlay*.epichord.joinDelay = 10s
+**.overlay*.epichord.stabilizeDelay = 20s
+**.overlay*.epichord.stabilizeEstimation = true
+**.overlay*.epichord.stabilizeEstimateMuliplier = 0.5
+**.overlay*.epichord.cacheFlushDelay = 20s
+**.overlay*.epichord.cacheCheckMultiplier = 3
+**.overlay*.epichord.cacheTTL = 120s
+**.overlay*.epichord.successorListSize = 4
+**.overlay*.epichord.nodesPerSlice = 2
+**.overlay*.epichord.cacheUpdateDelta = 0.5
+**.overlay*.epichord.activePropagation = true
+**.overlay*.epichord.sendFalseNegWarnings = true
+**.overlay*.epichord.fibonacci = false
+
+#OLSR manet routing
+
+**.vector-recording = true
+
+**.terminalTypes= "p2psipmanet.Host"
+*.underlayConfigurator.churnGeneratorTypes = "p2psipmanet.ZeroChurn"
+**.transitionTime = 20s
+**.measurementTime = 280s
+
+[Config EpiChordOverOLSR_FastJoin]
+#debug-on-errors = true
+#record-eventlog = true
+sim-time-limit = 60min #note: see oversim-specific parameters "transition-time" / "measurement time"
+description = EpiChord over OLSR
+network = Scenario
+
+*.hosts = 3
+
+**.constraintAreaMinX = 0m
+**.constraintAreaMinY = 0m
+**.constraintAreaMinZ = 0m
+**.constraintAreaMaxX = 2000m
+**.constraintAreaMaxY = 2000m
+**.constraintAreaMaxZ = 0m
+
+**.neighborCache.debugOutput = true
+**.epichord.overlayId = 0
+
+
+# mobility
+**.host*.mobilityType = "StationaryMobility"
+**.host*.mobility.initFromDisplayString = false
+
+**.host*.ac_wlan.interfaces = "wlan0"
+
+**.overlay*.epichord.lookupRedundantNodes = 3
+**.overlay*.epichord.lookupParallelPaths = 1
+**.overlay*.epichord.lookupParallelRpcs = 1
+**.overlay*.epichord.lookupMerge = false
+**.overlay*.epichord.routingType = "iterative"
+**.overlay*.epichord.joinRetry = 2
+**.overlay*.epichord.joinDelay = 5s
+**.overlay*.epichord.stabilizeDelay = 10s
+**.overlay*.epichord.stabilizeEstimation = false
+**.overlay*.epichord.stabilizeEstimateMuliplier = 1
+**.overlay*.epichord.cacheFlushDelay = 20s
+**.overlay*.epichord.cacheCheckMultiplier = 3
+**.overlay*.epichord.cacheTTL = 120s
+**.overlay*.epichord.successorListSize = 4
+**.overlay*.epichord.nodesPerSlice = 2
+**.overlay*.epichord.cacheUpdateDelta = 1
+**.overlay*.epichord.activePropagation = false
+**.overlay*.epichord.sendFalseNegWarnings = false
+**.overlay*.epichord.fibonacci = false
+
+#overlay
+**.overlayType = "p2psipmanet.ManetEpiChordModules"
+
+#tiers
+**.tier1Type = "oversim.applications.kbrtestapp.KBRTestAppModules"
+**.tier2Type = "oversim.common.TierDummy"
+**.tier3Type = "oversim.common.TierDummy"
+**.numTiers = 1
+
+**.tier3.debugOutput = false
+**.tier2.debugOutput = false
+
+#OLSR manet routing
+
+**.vector-recording = true
+
+**.terminalTypes= "p2psipmanet.Host"
+**.churnGeneratorTypes = "p2psipmanet.ZeroChurn" # a list of churn generators to be used
+**.transitionTime = 20s
+**.measurementTime = 280s
+
+[Config ChordOverOLSR]
+#debug-on-errors = true
+#record-eventlog = true
+sim-time-limit = 60min #note: see oversim-specific parameters "transition-time" / "measurement time"
+description = Chord over OLSR
+network = Scenario
+
+*.hosts = 3
+
+**.constraintAreaMinX = 0m
+**.constraintAreaMinY = 0m
+**.constraintAreaMinZ = 0m
+**.constraintAreaMaxX = 2000m
+**.constraintAreaMaxY = 2000m
+**.constraintAreaMaxZ = 0m
+
+**.neighborCache.debugOutput = true
+**.chord.overlayId = 0
+
+# mobility
+**.host*.mobilityType = "StationaryMobility"
+**.host*.mobility.initFromDisplayString = false
+
+**.host*.ac_wlan.interfaces = "wlan0"
+
+
+#overlay
+**.overlayType = "p2psipmanet.ManetChordModules"
+
+#tiers
+**.tier1Type = "oversim.applications.kbrtestapp.KBRTestAppModules"
+**.tier2Type = "oversim.common.TierDummy"
+**.tier3Type = "oversim.common.TierDummy"
+**.numTiers = 1
+
+**.tier3.debugOutput = false
+**.tier2.debugOutput = false
+
+#OLSR manet routing
+
+**.vector-recording = true
+
+**.terminalTypes= "p2psipmanet.Host"
+**.churnGeneratorTypes = "p2psipmanet.ZeroChurn" # a list of churn generators to be used
+**.transitionTime = 20s
+**.measurementTime = 280s
+
+
+[Config ChordDHTSIPOverOLSR_Stationary]
+#debug-on-errors = true
+record-eventlog = false
+sim-time-limit = 60min #note: see oversim-specific parameters "transition-time" / "measurement time"
+description = "Chord DHT SIP over OLSR - no mobility"
+network = Scenario
+
+*.hosts = 12
+
+**.constraintAreaMinX = 0m
+**.constraintAreaMinY = 0m
+**.constraintAreaMinZ = 0m
+**.constraintAreaMaxX = 2000m
+**.constraintAreaMaxY = 2000m
+**.constraintAreaMaxZ = 0m
+
+**.neighborCache.debugOutput = true
+**.chord.overlayId = 0
+
+# mobility
+**.host*.mobilityType = "StationaryMobility"
+**.host*.mobility.initFromDisplayString = false
+
+**.host*.ac_wlan.interfaces = "wlan0"
+
+#overlay
+**.overlayType = "p2psipmanet.ManetChordModules"
+
+#tiers
+**.tier1Type = "oversim.applications.dht.DHTModules"
+**.tier2Type = "oversim.tier2.p2pns.P2pnsModules"
+**.tier3Type = "oversim.common.TierDummy"
+
+**.numTiers = 2
+**.dht.numReplica = 4
+
+**.tier3.debugOutput = false
+**.tier2.debugOutput = false
 
 **.globalObserver.globalFunctions[0].functionType = "oversim.tier2.dhttestapp.GlobalDhtTestMap"
 **.globalObserver.numGlobalFunctions = 1
