initial OneHopOverlay4MANET commit

--- a/simulations/omnetpp.ini
+++ b/simulations/omnetpp.ini
@@ -1,5 +1,149 @@
 #simulations
 
+[Config OneHopOverlay4MANET]
+record-eventlog = false
+sim-time-limit = 60min #note: see oversim-specific parameters "transition-time" / "measurement time"
+description = "OneHopOverlay4MANET over OLSR"
+network = Scenario
+
+*.hosts = 30
+
+**.constraintAreaMinX = 0m
+**.constraintAreaMinY = 0m
+**.constraintAreaMinZ = 0m
+**.constraintAreaMaxX = 2000m
+**.constraintAreaMaxY = 2000m
+**.constraintAreaMaxZ = 0m
+
+**.neighborCache.debugOutput = true
+**.onehopoverlay4manet.overlayId = 0
+
+# mobility
+**.host*.mobilityType = "StationaryMobility"
+**.host*.mobility.initFromDisplayString = false
+
+**.host*.ac_wlan.interfaces = "wlan0"
+
+#overlay
+**.overlayType = "p2psipmanet.ManetOneHopOverlay4MANETModules"
+
+#tiers
+**.tier1Type = "oversim.applications.kbrtestapp.KBRTestAppModules"
+**.tier1*.kbrTestApp.testMsgInterval = 10s
+**.tier1*.kbrTestApp.kbrOneWayTest = false
+**.tier1*.kbrTestApp.kbrRpcTest = false
+**.tier1*.kbrTestApp.kbrLookupTest = true
+**.tier2Type = "oversim.common.TierDummy"
+**.tier3Type = "oversim.common.TierDummy"
+
+**.numTiers = 1
+
+**.tier3.debugOutput = false
+**.tier2.debugOutput = false
+
+**.overlay*.onehopoverlay4manet.lookupRedundantNodes = 3
+**.overlay*.onehopoverlay4manet.lookupParallelPaths = 1
+**.overlay*.onehopoverlay4manet.lookupParallelRpcs = 1
+**.overlay*.onehopoverlay4manet.lookupMerge = true
+**.overlay*.onehopoverlay4manet.routingType = "iterative"
+**.overlay*.onehopoverlay4manet.joinRetry = 2
+**.overlay*.onehopoverlay4manet.joinDelay = 10s
+**.overlay*.onehopoverlay4manet.stabilizeDelay = 20s
+**.overlay*.onehopoverlay4manet.stabilizeEstimation = true
+**.overlay*.onehopoverlay4manet.stabilizeEstimateMuliplier = 0.5
+**.overlay*.onehopoverlay4manet.cacheFlushDelay = 120s
+**.overlay*.onehopoverlay4manet.cacheCheckMultiplier = 3
+**.overlay*.onehopoverlay4manet.cacheTTL = 120s
+**.overlay*.onehopoverlay4manet.successorListSize = 4
+**.overlay*.onehopoverlay4manet.nodesPerSlice = 2 #not used anymore
+**.overlay*.onehopoverlay4manet.cacheUpdateDelta = 0.5
+**.overlay*.onehopoverlay4manet.activePropagation = true
+**.overlay*.onehopoverlay4manet.sendFalseNegWarnings = true
+**.overlay*.onehopoverlay4manet.fibonacci = false
+
+#OLSR manet routing
+
+**.vector-recording = true
+**.scalar-recording = true
+
+**.terminalTypes= "p2psipmanet.Host"
+*.underlayConfigurator.churnGeneratorTypes = "p2psipmanet.ZeroChurn"
+**.transitionTime = 20s
+**.measurementTime = 280s
+
+[Config OneHopOverlay4MANETBROKEN]
+#debug-on-errors = false
+record-eventlog = true
+sim-time-limit = 60min #note: see oversim-specific parameters "transition-time" / "measurement time"
+description = "OneHopOverlay4MANET over OLSR"
+network = Scenario
+
+#*.hosts = 25
+
+**.constraintAreaMinX = 0m
+**.constraintAreaMinY = 0m
+**.constraintAreaMinZ = 0m
+**.constraintAreaMaxX = 2000m
+**.constraintAreaMaxY = 2000m
+**.constraintAreaMaxZ = 0m
+
+**.neighborCache.debugOutput = true
+**.onehopoverlay4manet.overlayId = 0
+
+# mobility
+**.host*.mobilityType = "StationaryMobility"
+**.host*.mobility.initFromDisplayString = false
+
+**.host*.ac_wlan.interfaces = "wlan0"
+
+#overlay
+**.overlayType = "p2psipmanet.ManetOneHopOverlay4MANETModules"
+
+#tiers
+**.tier1Type = "oversim.applications.kbrtestapp.KBRTestAppModules"
+**.tier1*.kbrTestApp.kbrOneWayTest = false
+**.tier1*.kbrTestApp.kbrRpcTest = false
+**.tier1*.kbrTestApp.kbrLookupTest = true
+**.tier1*.kbrTestApp.testMsgInterval = 30s
+**.tier2Type = "oversim.common.TierDummy"
+**.tier3Type = "oversim.common.TierDummy"
+
+**.numTiers = 1
+
+**.tier3.debugOutput = false
+**.tier2.debugOutput = false
+
+
+**.overlay*.onehopoverlay4manet.lookupRedundantNodes = 3
+**.overlay*.onehopoverlay4manet.lookupParallelPaths = 1
+**.overlay*.onehopoverlay4manet.lookupParallelRpcs = 1
+**.overlay*.onehopoverlay4manet.lookupMerge = true
+**.overlay*.onehopoverlay4manet.routingType = "iterative"
+**.overlay*.onehopoverlay4manet.joinRetry = 2
+**.overlay*.onehopoverlay4manet.joinDelay = 10s
+**.overlay*.onehopoverlay4manet.stabilizeDelay = 20s
+**.overlay*.onehopoverlay4manet.stabilizeEstimation = true
+**.overlay*.onehopoverlay4manet.stabilizeEstimateMuliplier = 0.5
+**.overlay*.onehopoverlay4manet.cacheFlushDelay = 120s
+**.overlay*.onehopoverlay4manet.cacheCheckMultiplier = 3
+**.overlay*.onehopoverlay4manet.cacheTTL = 120s
+**.overlay*.onehopoverlay4manet.successorListSize = 4
+**.overlay*.onehopoverlay4manet.nodesPerSlice = 2 #not used anymore
+**.overlay*.onehopoverlay4manet.cacheUpdateDelta = 0.5
+**.overlay*.onehopoverlay4manet.activePropagation = true
+**.overlay*.onehopoverlay4manet.sendFalseNegWarnings = true
+**.overlay*.onehopoverlay4manet.fibonacci = false
+
+#OLSR manet routing
+
+**.vector-recording = true
+
+**.terminalTypes= "p2psipmanet.Host"
+*.underlayConfigurator.churnGeneratorTypes = "p2psipmanet.ZeroChurn"
+**.transitionTime = 20s
+**.measurementTime = 280s
+
+
 [Config ChordOverMANET]
 #debug-on-errors = true
 #record-eventlog = true
@@ -49,14 +193,14 @@ network = Scenario
 **.transitionTime = 20s
 **.measurementTime = 280s
 
-[Config ChordOverMANET_Stationary]
+[Config Chord]
 #debug-on-errors = true
-record-eventlog = true
+record-eventlog = false
 sim-time-limit = 60min #note: see oversim-specific parameters "transition-time" / "measurement time"
 description = "Chord over MANET - no mobility"
 network = Scenario
 
-*.hosts = 25
+*.hosts = 60
 
 **.constraintAreaMinX = 0m
 **.constraintAreaMinY = 0m
@@ -81,6 +225,10 @@ network = Scenario
 **.tier1Type = "oversim.applications.kbrtestapp.KBRTestAppModules"
 **.tier2Type = "oversim.common.TierDummy"
 **.tier3Type = "oversim.common.TierDummy"
+**.tier1*.kbrTestApp.kbrOneWayTest = false
+**.tier1*.kbrTestApp.kbrRpcTest = false
+**.tier1*.kbrTestApp.kbrLookupTest = true
+**.tier1*.kbrTestApp.testMsgInterval = 30s
 **.numTiers = 1
 
 **.tier3.debugOutput = false
@@ -103,7 +251,7 @@ sim-time-limit = 60min #note: see oversim-specific parameters "transition-time" 
 description = "Chord DHT over MANET - no mobility"
 network = Scenario
 
-*.hosts = 12
+*.hosts = 3
 
 **.constraintAreaMinX = 0m
 **.constraintAreaMinY = 0m
@@ -151,13 +299,13 @@ network = Scenario
 
 include ./default.ini
 
-[Config EpiChordOverOLSR]
+[Config EpiChord]
 record-eventlog = false
 sim-time-limit = 60min #note: see oversim-specific parameters "transition-time" / "measurement time"
 description = "EpiChord over OLSR"
 network = Scenario
 
-*.hosts = 3
+*.hosts = 60
 
 **.constraintAreaMinX = 0m
 **.constraintAreaMinY = 0m
@@ -184,6 +332,7 @@ network = Scenario
 **.tier1*.kbrTestApp.kbrOneWayTest = false
 **.tier1*.kbrTestApp.kbrRpcTest = false
 **.tier1*.kbrTestApp.kbrLookupTest = true
+**.tier1*.kbrTestApp.testMsgInterval = 30s
 **.tier2Type = "oversim.common.TierDummy"
 **.tier3Type = "oversim.common.TierDummy"
 
