add application layer attacks

--- a/simulations/attacks.ini
+++ b/simulations/attacks.ini
@@ -1,6 +1,6 @@
-[General] # based on ChordOverMANET_Stationary (see omnetpp.ini)
+[General] # based on ChordDHTOverMANET_Stationary (see omnetpp.ini)
 #debug-on-errors = true
-record-eventlog = true
+record-eventlog = false
 sim-time-limit = 60min #note: see oversim-specific parameters "transition-time" / "measurement time"
 network = Scenario
 
@@ -26,40 +26,51 @@ network = Scenario
 **.overlayType = "p2psipmanet.ManetChordModules"
 
 #tiers
-**.tier1Type = "oversim.applications.kbrtestapp.KBRTestAppModules"
-**.tier2Type = "oversim.common.TierDummy"
+**.tier1Type = "oversim.applications.dht.DHTModules"
+**.tier2Type = "oversim.tier2.dhttestapp.DHTTestAppModules"
 **.tier3Type = "oversim.common.TierDummy"
-**.numTiers = 1
 
-**.tier3.debugOutput = false
-**.tier2.debugOutput = false
+**.numTiers = 2
+**.dht.numReplica = 4
 
+**.tier3.debugOutput = true
+**.tier2.debugOutput = true
+
+**.globalObserver.globalFunctions[0].functionType = "oversim.tier2.dhttestapp.GlobalDhtTestMap"
+**.globalObserver.numGlobalFunctions = 1
 #OLSR manet routing
 
 **.vector-recording = true
 
 **.terminalTypes= "p2psipmanet.Host"
 **.churnGeneratorTypes = "p2psipmanet.ZeroChurn" # a list of churn generators to be used
-**.transitionTime = 20s
-**.measurementTime = 280s
+**.transitionTime = 100s
+**.measurementTime = 500s
 
 **.overlay*.*.dropFindNodeAttack = false
 **.overlay*.*.isSiblingAttack = false
 **.overlay*.*.invalidNodesAttack = false
 **.overlay*.*.dropRouteMessageAttack = false
 
+# secure maintenance makes the simulation crash
+# **.tier1*.dht.secureMaintenance = true
+**.tier1*.dht.invalidDataAttack = false
+**.tier1*.dht.maintenanceAttack = false
+
 # GlobalNodeList settings
-#*.globalObserver.globalNodeList.maliciousNodeProbability = 0.0
+*.globalObserver.globalNodeList.maliciousNodeProbability = 0.5
 *.globalObserver.globalNodeList.maliciousNodeChangeStartTime = 200s
 *.globalObserver.globalNodeList.maliciousNodeChangeRate = 0.05
 *.globalObserver.globalNodeList.maliciousNodeChangeInterval = 10s
 *.globalObserver.globalNodeList.maliciousNodeChangeStartValue = 0
 #*.globalObserver.globalNodeList.maliciousNodeChangeStopValue = 0.5
 
+#########################
+# Overlay Layer Attacks #
+#########################
+
 [Config CustomAttack]
 description = "Chord over MANET - no mobility - Custom Attack"
-
-# Nodes are malicious from the beginning
 
 [Config DropFindNodeAttack]
 description = "Chord over MANET - no mobility - Drop FindNode Attack"
@@ -110,5 +121,20 @@ description = "Chord over MANET - no mobility - Evolutionary Drop Route Message 
 **.overlay*.*.dropRouteMessageAttack = true
 *.globalObserver.globalNodeList.maliciousNodeProbability = 0.0
 *.globalObserver.globalNodeList.maliciousNodeChange = true
+
+#############################
+# Application Layer Attacks #
+#############################
+
+[Config InvalidDataAttack]
+**.tier1*.dht.numReplica = 1
+*.globalObserver.globalNodeList.maliciousNodeChange = false
+*.globalObserver.globalNodeList.maliciousNodeChangeStopValue = 0.5
+**.tier1*.dht.invalidDataAttack = true
+
+[Config MaintenanceAttack] # this has no effect since secure maintenance is not enabled
+*.globalObserver.globalNodeList.maliciousNodeChange = false
+*.globalObserver.globalNodeList.maliciousNodeChangeStopValue = 0.5
+**.tier1*.dht.maintenanceAttack = true
 
 include ./default.ini
