add P2PSIPTestApp as a copy of DHTTestApp

--- a/simulations/attacks.ini
+++ b/simulations/attacks.ini
@@ -27,18 +27,18 @@ network = Scenario
 
 #tiers
 **.tier1Type = "oversim.applications.dht.DHTModules"
-**.tier2Type = "oversim.tier2.dhttestapp.DHTTestAppModules"
+**.tier2Type = "p2psipmanet.testapp.P2PSIPTestAppModules"
 **.tier3Type = "oversim.common.TierDummy"
 
 **.numTiers = 2
 **.dht.numReplica = 4
 
-**.tier3.debugOutput = true
-**.tier2.debugOutput = true
+**.host*.tier2.p2psipApp.identifier = "id"
 
-**.globalObserver.globalFunctions[0].functionType = "oversim.tier2.dhttestapp.GlobalDhtTestMap"
+**.tier3.debugOutput = true
+
+**.globalObserver.globalFunctions[0].functionType = "p2psipmanet.testapp.GlobalDhtTestMap"
 **.globalObserver.numGlobalFunctions = 1
-#OLSR manet routing
 
 **.vector-recording = true
 
