--- a/simulations/default.ini
+++ b/simulations/default.ini
@@ -236,3 +236,7 @@ SingleHostUnderlayNetwork.overlayTerminal[0].cryptoModule.keyFile = "key.bin"
 **.tier2*.dhtTestApp.testInterval = 60s
 **.tier2*.dhtTestApp.testTtl = 300
 **.tier2*.dhtTestApp.p2pnsTraffic = false
+
+**.tier2*.p2psipApp.testInterval = 60s
+**.tier2*.p2psipApp.testTtl = 300
+**.tier2*.p2psipApp.p2pnsTraffic = false
