register id and random resolves in P2PSIP test app

--- a/simulations/attacks.ini
+++ b/simulations/attacks.ini
@@ -37,7 +37,7 @@ network = Scenario
 
 **.tier3.debugOutput = true
 
-**.globalObserver.globalFunctions[0].functionType = "p2psipmanet.testapp.GlobalDhtTestMap"
+**.globalObserver.globalFunctions[0].functionType = "p2psipmanet.testapp.GlobalP2PSIPTestMap"
 **.globalObserver.numGlobalFunctions = 1
 
 **.vector-recording = true
@@ -58,7 +58,7 @@ network = Scenario
 **.tier1*.dht.maintenanceAttack = false
 
 # GlobalNodeList settings
-*.globalObserver.globalNodeList.maliciousNodeProbability = 0.5
+*.globalObserver.globalNodeList.maliciousNodeProbability = 0.0
 *.globalObserver.globalNodeList.maliciousNodeChangeStartTime = 200s
 *.globalObserver.globalNodeList.maliciousNodeChangeRate = 0.05
 *.globalObserver.globalNodeList.maliciousNodeChangeInterval = 10s
