implement challenge after resolve

--- a/simulations/attacks.ini
+++ b/simulations/attacks.ini
@@ -27,10 +27,10 @@ network = Scenario
 
 #tiers
 **.tier1Type = "oversim.applications.dht.DHTModules"
-**.tier2Type = "p2psipmanet.testapp.P2PSIPTestAppModules"
-**.tier3Type = "oversim.common.TierDummy"
+**.tier2Type = "oversim.tier2.p2pns.P2pnsModules"
+**.tier3Type = "p2psipmanet.testapp.P2PSIPTestAppModules"
 
-**.numTiers = 2
+**.numTiers = 3
 **.dht.numReplica = 4
 
 **.host*.tier2.p2psipApp.identifier = randomIdentifier(8)
