add toggle for challenge + fixes

--- a/simulations/attacks.ini
+++ b/simulations/attacks.ini
@@ -33,7 +33,7 @@ network = Scenario
 **.numTiers = 3
 **.dht.numReplica = 4
 
-**.host*.tier2.p2psipApp.identifier = randomIdentifier(8)
+**.host*.tier3.p2psipApp.identifier = randomIdentifier(8)
 
 **.tier3.debugOutput = true
 
@@ -58,7 +58,7 @@ network = Scenario
 **.tier1*.dht.maintenanceAttack = false
 
 # GlobalNodeList settings
-*.globalObserver.globalNodeList.maliciousNodeProbability = 0.0
+#*.globalObserver.globalNodeList.maliciousNodeProbability = 0.0
 *.globalObserver.globalNodeList.maliciousNodeChangeStartTime = 200s
 *.globalObserver.globalNodeList.maliciousNodeChangeRate = 0.05
 *.globalObserver.globalNodeList.maliciousNodeChangeInterval = 10s
