add stats scripts

--- a/simulations/attacks.ini
+++ b/simulations/attacks.ini
@@ -31,7 +31,7 @@ network = Scenario
 **.tier3Type = "p2psipmanet.testapp.P2PSIPTestAppModules"
 
 **.numTiers = 3
-**.dht.numReplica = 4
+**.dht.numReplica = 1
 
 **.host*.tier3.p2psipApp.identifier = randomIdentifier(8)
 
@@ -55,6 +55,7 @@ network = Scenario
 # secure maintenance makes the simulation crash
 # **.tier1*.dht.secureMaintenance = true
 **.tier1*.dht.invalidDataAttack = false
+**.tier1*.dht.resolveToSelfAttack = false
 **.tier1*.dht.maintenanceAttack = false
 
 # GlobalNodeList settings
@@ -78,7 +79,7 @@ description = "Chord over MANET - no mobility - Drop FindNode Attack"
 *.globalObserver.globalNodeList.maliciousNodeChange = false
 *.globalObserver.globalNodeList.maliciousNodeChangeStopValue = 0.5
 
-[Config SiblingAttack]
+[Config IsSiblingAttack]
 description = "Chord over MANET - no mobility - Sibling Attack"
 **.overlay*.*.isSiblingAttack = true
 *.globalObserver.globalNodeList.maliciousNodeChange = false
@@ -104,7 +105,7 @@ description = "Chord over MANET - no mobility - Evolutionary Drop FindNode Attac
 *.globalObserver.globalNodeList.maliciousNodeProbability = 0.0
 *.globalObserver.globalNodeList.maliciousNodeChange = true
 
-[Config SiblingAttackEvolutionary]
+[Config IsSiblingAttackEvolutionary]
 description = "Chord over MANET - no mobility - Evolutionary Sibling Attack"
 **.overlay*.*.isSiblingAttack = true
 *.globalObserver.globalNodeList.maliciousNodeProbability = 0.0
@@ -127,10 +128,23 @@ description = "Chord over MANET - no mobility - Evolutionary Drop Route Message 
 #############################
 
 [Config InvalidDataAttack]
-**.tier1*.dht.numReplica = 1
+#**.tier1*.dht.numReplica = 1
 *.globalObserver.globalNodeList.maliciousNodeChange = false
 *.globalObserver.globalNodeList.maliciousNodeChangeStopValue = 0.5
 **.tier1*.dht.invalidDataAttack = true
+
+[Config ResolveToSelfAttack]
+#**.tier1*.dht.numReplica = 1
+*.globalObserver.globalNodeList.maliciousNodeChange = false
+*.globalObserver.globalNodeList.maliciousNodeChangeStopValue = 0.5
+**.tier1*.dht.resolveToSelfAttack = true
+
+[Config IsSiblingAndResolveToSelfAttack]
+#**.tier1*.dht.numReplica = 1
+*.globalObserver.globalNodeList.maliciousNodeChange = false
+*.globalObserver.globalNodeList.maliciousNodeChangeStopValue = 0.5
+**.overlay*.*.isSiblingAttack = true
+**.tier1*.dht.resolveToSelfAttack = true
 
 [Config MaintenanceAttack] # this has no effect since secure maintenance is not enabled
 *.globalObserver.globalNodeList.maliciousNodeChange = false
